# dds-datamodels-tex

./: .gitignore  CMakeLists.txt  README.md  datamodel.json
datamodel/idl/: CategorizationData.idl  EntityPayload.idl  EntityPayloadManagement.idl  GroupPayload.idl  TimeBase.idl  Util.idl
